--- a/index.html
+++ b/index.html
@@ -31,42 +31,202 @@
           </ul>
         </div>
         <div class="col">
-          <div class="b-emailPhone d-flex">
-               <div class="b-email">
-                <a href="#" class="b-phone__email">Example@gmail.com</a>
-              </div>
-              <div class="b-phone">
-                <a href="#" class="b-phone__link">+ 7 999 999 99 99</a>
-              </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </Header>
-  <section class="b-slider">
-    <div class="b-slide s-item1">
-      <div class="container">
-        <div class="row d-flex">
-          <div class="col-md-8">
-            <div class="b-sitem">
-              <div class="b-sitem__title">
-                Изготавливаем перегородки
-                из <span>HPL</span> и <span>ЛДСП</span>
-              </div>
-              <div class="b-sitem__txt">
-                Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
-                реализует
-                их по цене, доступной для организации с любым бюджетом. У нас можно купить данные изделия с заполнением
-                из
-                HPL-пластика и ЛДСП
-              </div>
-              <a href="#" class="b-sitem__order">Оформить заказ</a>
+          <div class="d-flex align-items-center">
+            <div class="b-email">
+              <a href="#" class="b-phone__email">Example@gmail.com</a>
+            </div>
+            <div class="b-phone">
+              <a href="#" class="b-phone__link">+ 7 999 999 99 99</a>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </Header>
+  <section class="b-slide-container">
+    <div class="b-slider">
+      <div class="b-slide s-item1">
+        <div class="container">
+          <div class="row d-flex">
+            <div class="col-md-8">
+              <div class="b-sitem">
+                <div class="b-sitem__title">
+                  Изготавливаем перегородки
+                  из <span>HPL</span> и <span>ЛДСП</span>
+                </div>
+                <div class="b-sitem__txt">
+                  Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                  реализует
+                  их по цене, доступной для организации с любым бюджетом. У нас можно купить данные изделия с
+                  заполнением
+                  из
+                  HPL-пластика и ЛДСП
+                </div>
+                <a href="#" class="b-sitem__order">Оформить заказ</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="b-slide s-item1">
+        <div class="container">
+          <div class="row d-flex">
+            <div class="col-md-8">
+              <div class="b-sitem">
+                <div class="b-sitem__title">
+                  Изготавливаем перегородки
+                  из <span>HPL</span> и <span>ЛДСП</span>
+                </div>
+                <div class="b-sitem__txt">
+                  Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                  реализует
+                  их по цене, доступной для организации с любым бюджетом. У нас можно купить данные изделия с
+                  заполнением
+                  из
+                  HPL-пластика и ЛДСП
+                </div>
+                <a href="#" class="b-sitem__order">Оформить заказ</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="b-slide s-item1">
+        <div class="container">
+          <div class="row d-flex">
+            <div class="col-md-8">
+              <div class="b-sitem">
+                <div class="b-sitem__title">
+                  Изготавливаем перегородки
+                  из <span>HPL</span> и <span>ЛДСП</span>
+                </div>
+                <div class="b-sitem__txt">
+                  Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                  реализует
+                  их по цене, доступной для организации с любым бюджетом. У нас можно купить данные изделия с
+                  заполнением
+                  из
+                  HPL-пластика и ЛДСП
+                </div>
+                <a href="#" class="b-sitem__order">Оформить заказ</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+      <div class="b-slide s-item1">
+        <div class="container">
+          <div class="row d-flex">
+            <div class="col-md-8">
+              <div class="b-sitem">
+                <div class="b-sitem__title">
+                  Изготавливаем перегородки
+                  из <span>HPL</span> и <span>ЛДСП</span>
+                </div>
+                <div class="b-sitem__txt">
+                  Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                  реализует
+                  их по цене, доступной для организации с любым бюджетом. У нас можно купить данные изделия с
+                  заполнением
+                  из
+                  HPL-пластика и ЛДСП
+                </div>
+                <a href="#" class="b-sitem__order">Оформить заказ</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="b-slide s-item1">
+        <div class="container">
+          <div class="row d-flex">
+            <div class="col-md-8">
+              <div class="b-sitem">
+                <div class="b-sitem__title">
+                  Изготавливаем перегородки
+                  из <span>HPL</span> и <span>ЛДСП</span>
+                </div>
+                <div class="b-sitem__txt">
+                  Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                  реализует
+                  их по цене, доступной для организации с любым бюджетом. У нас можно купить данные изделия с
+                  заполнением
+                  из
+                  HPL-пластика и ЛДСП
+                </div>
+                <a href="#" class="b-sitem__order">Оформить заказ</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="b-slide s-item1">
+        <div class="container">
+          <div class="row d-flex">
+            <div class="col-md-8">
+              <div class="b-sitem">
+                <div class="b-sitem__title">
+                  Изготавливаем перегородки
+                  из <span>HPL</span> и <span>ЛДСП</span>
+                </div>
+                <div class="b-sitem__txt">
+                  Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                  реализует
+                  их по цене, доступной для организации с любым бюджетом. У нас можно купить данные изделия с
+                  заполнением
+                  из
+                  HPL-пластика и ЛДСП
+                </div>
+                <a href="#" class="b-sitem__order">Оформить заказ</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+      <div class="b-slide s-item1">
+        <div class="container">
+          <div class="row d-flex">
+            <div class="col-md-8">
+              <div class="b-sitem">
+                <div class="b-sitem__title">
+                  Изготавливаем перегородки
+                  из <span>HPL</span> и <span>ЛДСП</span>
+                </div>
+                <div class="b-sitem__txt">
+                  Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                  реализует
+                  их по цене, доступной для организации с любым бюджетом. У нас можно купить данные изделия с
+                  заполнением
+                  из
+                  HPL-пластика и ЛДСП
+                </div>
+                <a href="#" class="b-sitem__order">Оформить заказ</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="b-slide__dotts">
+      <span class="b-slide__top"></span>
+      <div class="b-slide__d">
+        <ul class="b-slide__dott"></ul>
+      </div>
+      <span class="b-slide__bottom"></span>
+    </div>
   </section>
+
   <section class="b-firstblock">
     <div class="container">
       <div class="row">
@@ -454,6 +614,67 @@
       </div>
     </div>
   </section>
+
+  <section class="b-digitalCompany">
+    <div class="container">
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-12">
+          <div class="b-title">
+            <span> Перегородки из ЛДСП</span>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="b-digitalCompany__item">
+            <div>
+              <span>15 624</span>
+              квадратных метров<br>
+              из HPL
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="b-digitalCompany__item">
+            <div>
+              <span>99 870</span>
+              квадратных метров<br>
+              из HPL
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="b-digitalCompany__item">
+            <div>
+              <span>96%</span>
+              довольных<br>
+              клиентов
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="b-digitalCompany__item">
+            <div>
+              <span>21</span>
+              год<br>
+              работы
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="b-textAbout">
+    <div class="container">
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-12">
+          <div class="b-textAbout__item">
+            Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и реализует их по цене, доступной для организации с любым бюджетом. У нас можно купить данные изделия с заполнением из HPL-пластика и ЛДСП.Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и реализует их по цене, доступной для организации с любым бюджетом. У нас можно купить данные изделия с заполнением из HPL-пластика и ЛДСП
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="js/main.js"></script>
 </body>
 
