--- a/index.html
+++ b/index.html
@@ -668,12 +668,273 @@
       <div class="row d-flex justify-content-center">
         <div class="col-md-12">
           <div class="b-textAbout__item">
-            Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и реализует их по цене, доступной для организации с любым бюджетом. У нас можно купить данные изделия с заполнением из HPL-пластика и ЛДСП.Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и реализует их по цене, доступной для организации с любым бюджетом. У нас можно купить данные изделия с заполнением из HPL-пластика и ЛДСП
+            Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и реализует
+            их по цене, доступной для организации с любым бюджетом. У нас можно купить данные изделия с заполнением из
+            HPL-пластика и ЛДСП.Компания которая занимается изготовлением сантехнических перегородок на собственном
+            производстве и реализует их по цене, доступной для организации с любым бюджетом. У нас можно купить данные
+            изделия с заполнением из HPL-пластика и ЛДСП
           </div>
         </div>
       </div>
     </div>
   </section>
+  <section class="b-project">
+    <div class="container">
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-12">
+          <div class="b-title">
+            <span> Перегородки из ЛДСП</span>
+          </div>
+        </div>
+      </div>
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-6">
+          <ul class="d-tabs-list t-lits2">
+            <li data-tabs="#tabId-7">Перегородки из HPL</li>
+            <li data-tabs="#tabId-8">Перегородки из ЛДСП</li>
+          </ul>
+        </div>
+        <div class="col-md-12">
+          <div class="b-project__slider">
+            <div class="b-project__slide">
+              <ul class="b-project__listimg">
+                <li>
+                  <img src="img/img_slider/img1.jpg" alt="">
+                </li>
+                <li>
+                  <img src="img/img_slider/img2.jpg" alt="">
+                </li>
+                <li>
+                  <img src="img/img_slider/img3.jpg" alt="">
+                </li>
+
+                <li>
+                  <img src="img/img_slider/img4.jpg" alt="">
+                </li>
+                <li>
+                  <img src="img/img_slider/img5.jpg" alt="">
+                </li>
+                <li>
+                  <img src="img/img_slider/img6.jpg" alt="">
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+  </section>
+  <section class="b-stock">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="b-stock__item">
+            <div class="b-stock__body">
+              <div class="b-stock__item__title">Закажи рассчет сейчас и получи скидку</div>
+              <div class="b-stock__txt">Компания которая занимается изготовлением сантехнических перегородок на
+                собственном производстве и реализует
+                их по цене, доступной для</div>
+              <a href="" class="b-stock__calc">Заказать рассчет</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="b-access">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="b-access__title">Фурнитура для сантехнических перегородок</div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2">
+          <div class="b-access__item">
+            <div class="b-access__item__img">
+              <img src="img/img3.jpg" alt="">
+              <div class="b-access__item__txt">Фурнитура для
+                сантехнических
+                перегородок
+                Фурнитура для
+                сантехнических
+                перегородок</div>
+            </div>
+            <div class="b-access__item__title">Пластиковая фурнитура</div>
+
+          </div>
+        </div>
+        <div class="col-md-2">
+          <div class="b-access__item">
+            <div class="b-access__item__img">
+              <img src="img/img3.jpg" alt="">
+              <div class="b-access__item__txt">Фурнитура для
+                сантехнических
+                перегородок
+                Фурнитура для
+                сантехнических
+                перегородок</div>
+            </div>
+            <div class="b-access__item__title">Нержавеющая опора</div>
+
+          </div>
+        </div>
+        <div class="col-md-2">
+          <div class="b-access__item">
+            <div class="b-access__item__img">
+              <img src="img/img3.jpg" alt="">
+              <div class="b-access__item__txt">Фурнитура для
+                сантехнических
+                перегородок
+                Фурнитура для
+                сантехнических
+                перегородок</div>
+            </div>
+            <div class="b-access__item__title">Алюминевый профиль</div>
+
+          </div>
+        </div>
+        <div class="col-md-2">
+          <div class="b-access__item">
+            <div class="b-access__item__img">
+              <img src="img/img3.jpg" alt="">
+              <div class="b-access__item__txt">Фурнитура для
+                сантехнических
+                перегородок
+                Фурнитура для
+                сантехнических
+                перегородок</div>
+            </div>
+            <div class="b-access__item__title">Нержавеющая ручка</div>
+
+          </div>
+        </div>
+        <div class="col-md-2">
+          <div class="b-access__item">
+            <div class="b-access__item__img">
+              <img src="img/img3.jpg" alt="">
+              <div class="b-access__item__txt">Фурнитура для
+                сантехнических
+                перегородок
+                Фурнитура для
+                сантехнических
+                перегородок</div>
+            </div>
+            <div class="b-access__item__title">Нажимной гарнитур</div>
+
+          </div>
+        </div>
+        <div class="col-md-2">
+          <div class="b-access__item">
+            <div class="b-access__item__img">
+              <img src="img/img3.jpg" alt="">
+              <div class="b-access__item__txt">Фурнитура для
+                сантехнических
+                перегородок
+                Фурнитура для
+                сантехнических
+                перегородок</div>
+            </div>
+            <div class="b-access__item__title">Пластиковая фурнитура</div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+  <section class="b-facebook">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="b-facebook__title"> Оставьте свои контакты <br> и мы свяжемся с вами</div>
+
+          <div class="b-facebook__txt"> Наша продукция – это гармоничное сочетание функциональности, технической
+            точности и
+            эстетической привлекательности. С каждым годом мы расширяем ассортимент готовых изделий.
+            Наша продукция – это гармоничное сочетание функциональности, технической точности
+            и эстетической привлекательности. С каждым годом мы расширяем ассортимент готовых изделий.</div>
+          <div class="b-facebook__form">
+
+            <div class="b-facebook__form__title">Заказать расчет</div>
+
+            <div class="b-facebook__form__txt"> Оставьте заявку и мы свяжемся с<br> вами в течение часа</div>
+            <div class="row b-facebook__form__row">
+              <div class="col-md-6">
+                <input type="text" class="b-facebook__input" placeholder="Имя">
+              </div>
+              <div class="col-md-6">
+                <input type="text" class="b-facebook__input" placeholder="Фамилия">
+              </div>
+            </div>
+            <div class="row b-facebook__form__row">
+              <div class="col-md-6">
+                <input type="text" class="b-facebook__input" placeholder="Телефон">
+              </div>
+              <div class="col-md-6">
+                <input type="text" class="b-facebook__input" placeholder="Почта">
+              </div>
+            </div>
+            <div class="row b-facebook__form__row">
+              <div class="col-md-12">
+                <textarea name="" id="" cols="30" rows="10" class="b-facebook__textarea"
+                  placeholder="Напишите что вас интересует..."></textarea>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <div class="b-facebook__button">
+                  <input type="submit" value="Перезвонить мне" class="b-facebook__submit">
+                  <div class="b-facebook__file">
+                    <input name="file" type="file" name="file" id="input__file" class="input__file" multiple>
+                    <label for="input__file" class="b-facebook__file__label">
+                      <span class="b-facebook__file__button__span">Выберите файл</span>
+                    </label>
+                  </div>
+                </div>
+                <div class="b-facebook__pilitica">
+                  Я даю свое согласие на обработку персональных данных
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer class="b-footer">
+    <div class="container">
+      <div class="row d-flex justify-content-between align-items-start">
+        <div class="col-md-3">
+          <div class="b-footer__logo">
+            <a href="#" class="b-footer__logo-link"><img src="img/Logo.svg"></a>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="b-footer__info">
+            <ul class="b-footer__info__list">
+              <li> <a href="#"> Перегородки из HPL</a></li>
+              <li> <a href="#"> Перегородки из ЛДСП </a></li>
+            </ul>
+            <div class="b-footer__txt">
+              Компания «Wall Cetre» изготавливает и устанавливает писсуарные, душевые и сантехнические перегородки
+              разнообразного размера и дизайна.
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <ul class="b-footer__contact">
+            <li>Москва, ул. Полярная, д. 33</li>
+            <li>Тел.: +7 (495) 662-4873</li>
+            <li>Example@gmail.com</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+  </footer>
+  <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A6f61cdb55d6a8631dd07fd27d4093ed7349e3bf4ee77580775cfd754074e29e3&amp;width=100%&amp;height=318&amp;lang=ru_RU&amp;scroll=true"></script>
 
   <script src="js/main.js"></script>
 </body>
