--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
       </div>
     </div>
   </section>
-  <section class="b-project">
+  <section class="b-project" id="tabs3">
     <div class="container">
       <div class="row d-flex justify-content-center">
         <div class="col-md-12">
@@ -695,30 +695,100 @@
           </ul>
         </div>
         <div class="col-md-12">
-          <div class="b-project__slider">
-            <div class="b-project__slide">
-              <ul class="b-project__listimg">
-                <li>
-                  <img src="img/img_slider/img1.jpg" alt="">
-                </li>
-                <li>
-                  <img src="img/img_slider/img2.jpg" alt="">
-                </li>
-                <li>
-                  <img src="img/img_slider/img3.jpg" alt="">
-                </li>
-
-                <li>
-                  <img src="img/img_slider/img4.jpg" alt="">
-                </li>
-                <li>
-                  <img src="img/img_slider/img5.jpg" alt="">
-                </li>
-                <li>
-                  <img src="img/img_slider/img6.jpg" alt="">
-                </li>
-              </ul>
+          <div class="b-tab__item">
+            <div class="b-project__slider">
+              <div class="b-project__slide">
+                <div class="b-project__slide__list">
+                  <div class="b-project__slide__item">
+                    <img src="img/img_slider/img1.jpg" alt="">
+                    <span class="b-project__slide__item__txt">
+                      Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                      реализует их по цене, доступной для
+                    </span>
+                  </div>
+                  <div class="b-project__slide__item">
+                    <img src="img/img_slider/img2.jpg" alt="">
+                    <span class="b-project__slide__item__txt">
+                      Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                      реализует их по цене, доступной для
+                    </span>
+                  </div>
+                  <div class="b-project__slide__item">
+                    <img src="img/img_slider/img3.jpg" alt="">
+                    <span class="b-project__slide__item__txt">
+                      Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                      реализует их по цене, доступной для
+                    </span>
+                  </div>
+                  <div class="b-project__slide__item">
+                    <img src="img/img_slider/img4.jpg" alt="">
+                    <span class="b-project__slide__item__txt">
+                      Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                      реализует их по цене, доступной для
+                    </span>
+                  </div>
+                  <div class="b-project__slide__item">
+                    <img src="img/img_slider/img5.jpg" alt="">
+                    <span class="b-project__slide__item__txt">
+                      Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                      реализует их по цене, доступной для
+                    </span>
+                  </div>
+                  <div class="b-project__slide__item">
+                    <img src="img/img_slider/img6.jpg" alt="">
+                    <span class="b-project__slide__item__txt">
+                      Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                      реализует их по цене, доступной для
+                    </span>
+                  </div>
+                  <div class="b-project__slide__item">
+                    <img src="img/img_slider/img6.jpg" alt="">
+                    <span class="b-project__slide__item__txt">
+                      Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                      реализует их по цене, доступной для
+                    </span>
+                  </div>
+                  <div class="b-project__slide__item">
+                    <img src="img/img_slider/img6.jpg" alt="">
+                    <span class="b-project__slide__item__txt">
+                      Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                      реализует их по цене, доступной для
+                    </span>
+                  </div>
+                  <div class="b-project__slide__item">
+                    <img src="img/img_slider/img6.jpg" alt="">
+                    <span class="b-project__slide__item__txt">
+                      Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                      реализует их по цене, доступной для
+                    </span>
+                  </div>
+                  <div class="b-project__slide__item">
+                    <img src="img/img_slider/img6.jpg" alt="">
+                    <span class="b-project__slide__item__txt">
+                      Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                      реализует их по цене, доступной для
+                    </span>
+                  </div>
+                  <div class="b-project__slide__item">
+                    <img src="img/img_slider/img6.jpg" alt="">
+                    <span class="b-project__slide__item__txt">
+                      Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                      реализует их по цене, доступной для
+                    </span>
+                  </div>
+                  <div class="b-project__slide__item">
+                    <img src="img/img_slider/img6.jpg" alt="">
+                    <span class="b-project__slide__item__txt">
+                      Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                      реализует их по цене, доступной для
+                    </span>
+                  </div>              
+                </div>
+              </div>
             </div>
+          </div>
+          <div class="b-tab__item">
+           
           </div>
         </div>
       </div>
@@ -934,7 +1004,8 @@
     </div>
 
   </footer>
-  <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A6f61cdb55d6a8631dd07fd27d4093ed7349e3bf4ee77580775cfd754074e29e3&amp;width=100%&amp;height=318&amp;lang=ru_RU&amp;scroll=true"></script>
+  <script type="text/javascript" charset="utf-8" async
+    src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A6f61cdb55d6a8631dd07fd27d4093ed7349e3bf4ee77580775cfd754074e29e3&amp;width=100%&amp;height=318&amp;lang=ru_RU&amp;scroll=true"></script>
 
   <script src="js/main.js"></script>
 </body>
