фиксированная шапка при прокрутке

--- a/index.html
+++ b/index.html
@@ -14,29 +14,31 @@
 
 <body>
   <Header class="header">
-    <div class="container">
-      <div class="row d-flex justify-content-between align-items-center">
-        <div class="col">
-          <div class="b-logo">
-            <a href="#"><img class="b-logo__img" src="img/Logo.svg" /></a>
-          </div>
-        </div>
-        <div class="col">
-          <ul class="b-menu__list">
-            <li><a href="#">Перегородки из HPL</a></li>
-            <li><a href="#">Перегородки из ЛДСП</a></li>
-            <li><a href="#"> Стоимость</a></li>
-            <li><a href="#">Проекты</a></li>
-            <li><a href="#">Контакты</a></li>
-          </ul>
-        </div>
-        <div class="col">
-          <div class="d-flex align-items-center">
-            <div class="b-email">
-              <a href="#" class="b-phone__email">Example@gmail.com</a>
+    <div class="head">
+      <div class="container">
+        <div class="row d-flex justify-content-between align-items-center">
+          <div class="col">
+            <div class="b-logo">
+              <a href="#"><img class="b-logo__img" src="img/Logo.svg" /></a>
             </div>
-            <div class="b-phone">
-              <a href="#" class="b-phone__link">+ 7 999 999 99 99</a>
+          </div>
+          <div class="col">
+            <ul class="b-menu__list">
+              <li><a href="#">Перегородки из HPL</a></li>
+              <li><a href="#">Перегородки из ЛДСП</a></li>
+              <li><a href="#"> Стоимость</a></li>
+              <li><a href="#">Проекты</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
+          </div>
+          <div class="col">
+            <div class="d-flex align-items-center">
+              <div class="b-email">
+                <a href="#" class="b-phone__email">Example@gmail.com</a>
+              </div>
+              <div class="b-phone">
+                <a href="#" class="b-phone__link">+ 7 999 999 99 99</a>
+              </div>
             </div>
           </div>
         </div>
@@ -782,13 +784,28 @@
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
-                  </div>              
+                  </div>
+                  <div class="b-project__slide__item">
+                    <img src="img/img_slider/img6.jpg" alt="">
+                    <span class="b-project__slide__item__txt">
+                      Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                      реализует их по цене, доступной для
+                    </span>
+                  </div>
+                  <div class="b-project__slide__item">
+                    <img src="img/img_slider/img6.jpg" alt="">
+                    <span class="b-project__slide__item__txt">
+                      Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                      реализует их по цене, доступной для
+                    </span>
+                  </div>
+
                 </div>
               </div>
             </div>
           </div>
           <div class="b-tab__item">
-           
+
           </div>
         </div>
       </div>
