всплывающее модальное окно

--- a/index.html
+++ b/index.html
@@ -1019,11 +1019,53 @@
         </div>
       </div>
     </div>
-
   </footer>
+  <div class="modal-popup">
+    <div class="b-facebook__form">
+      <div class="b-facebook__form__title">Заказать расчет</div>
+      <div class="b-facebook__form__txt"> Оставьте заявку и мы свяжемся с<br> вами в течение часа</div>
+      <div class="row b-facebook__form__row">
+        <div class="col-md-6">
+          <input type="text" class="b-facebook__input" placeholder="Имя">
+        </div>
+        <div class="col-md-6">
+          <input type="text" class="b-facebook__input" placeholder="Фамилия">
+        </div>
+      </div>
+      <div class="row b-facebook__form__row">
+        <div class="col-md-6">
+          <input type="text" class="b-facebook__input" placeholder="Телефон">
+        </div>
+        <div class="col-md-6">
+          <input type="text" class="b-facebook__input" placeholder="Почта">
+        </div>
+      </div>
+      <div class="row b-facebook__form__row">
+        <div class="col-md-12">
+          <textarea name="" id="" cols="30" rows="10" class="b-facebook__textarea"
+            placeholder="Напишите что вас интересует..."></textarea>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="b-facebook__button">
+            <input type="submit" value="Перезвонить мне" class="b-facebook__submit">
+            <div class="b-facebook__file">
+              <input name="file" type="file" name="file" id="input__file" class="input__file" multiple>
+              <label for="input__file" class="b-facebook__file__label">
+                <span class="b-facebook__file__button__span">Выберите файл</span>
+              </label>
+            </div>
+          </div>
+          <div class="b-facebook__pilitica">
+            Я даю свое согласие на обработку персональных данных
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <script type="text/javascript" charset="utf-8" async
     src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A6f61cdb55d6a8631dd07fd27d4093ed7349e3bf4ee77580775cfd754074e29e3&amp;width=100%&amp;height=318&amp;lang=ru_RU&amp;scroll=true"></script>
-
   <script src="js/main.js"></script>
 </body>
 
