--- a/index.html
+++ b/index.html
@@ -701,104 +701,104 @@
             <div class="b-project__slider">
               <div class="b-project__slide">
                 <div class="b-project__slide__list">
-                  <div class="b-project__slide__item">
+                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
                     <img src="img/img_slider/img1.jpg" alt="">
                     <span class="b-project__slide__item__txt">
-                      Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                     1  Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
-                  </div>
-                  <div class="b-project__slide__item">
+                  </a>
+                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
                     <img src="img/img_slider/img2.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
-                  </div>
-                  <div class="b-project__slide__item">
+                  </a>
+                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
                     <img src="img/img_slider/img3.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
-                  </div>
-                  <div class="b-project__slide__item">
+                  </a>
+                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
                     <img src="img/img_slider/img4.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
-                  </div>
-                  <div class="b-project__slide__item">
+                  </a>
+                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
                     <img src="img/img_slider/img5.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
-                  </div>
-                  <div class="b-project__slide__item">
+                  </a>
+                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
                     <img src="img/img_slider/img6.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
-                  </div>
-                  <div class="b-project__slide__item">
+                  </a>
+                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
                     <img src="img/img_slider/img6.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
-                  </div>
-                  <div class="b-project__slide__item">
+                  </a>
+                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
                     <img src="img/img_slider/img6.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
-                  </div>
-                  <div class="b-project__slide__item">
+                  </a>
+                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
                     <img src="img/img_slider/img6.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
-                  </div>
-                  <div class="b-project__slide__item">
+                  </a>
+                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
                     <img src="img/img_slider/img6.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
-                  </div>
-                  <div class="b-project__slide__item">
+                  </a>
+                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
                     <img src="img/img_slider/img6.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
-                  </div>
-                  <div class="b-project__slide__item">
+                  </a>
+                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
                     <img src="img/img_slider/img6.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
-                  </div>
-                  <div class="b-project__slide__item">
+                  </a>
+                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
                     <img src="img/img_slider/img6.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
-                  </div>
-                  <div class="b-project__slide__item">
+                  </a>
+                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
                     <img src="img/img_slider/img6.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
-                  </div>
+                  </a>
 
                 </div>
               </div>
@@ -1064,6 +1064,7 @@
       </div>
     </div>
   </div>
+
   <script type="text/javascript" charset="utf-8" async
     src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A6f61cdb55d6a8631dd07fd27d4093ed7349e3bf4ee77580775cfd754074e29e3&amp;width=100%&amp;height=318&amp;lang=ru_RU&amp;scroll=true"></script>
   <script src="js/main.js"></script>
