--- a/index.html
+++ b/index.html
@@ -627,6 +627,7 @@
         </div>
         <div class="col-md-3">
           <div class="b-digitalCompany__item">
+            <i class="b-digitalCompany__circle"><i></i></i>
             <div>
               <span>15 624</span>
               квадратных метров<br>
@@ -636,6 +637,7 @@
         </div>
         <div class="col-md-3">
           <div class="b-digitalCompany__item">
+            <i class="b-digitalCompany__circle"><i></i></i>
             <div>
               <span>99 870</span>
               квадратных метров<br>
@@ -645,6 +647,7 @@
         </div>
         <div class="col-md-3">
           <div class="b-digitalCompany__item">
+            <i class="b-digitalCompany__circle"><i></i></i>
             <div>
               <span>96%</span>
               довольных<br>
@@ -654,6 +657,7 @@
         </div>
         <div class="col-md-3">
           <div class="b-digitalCompany__item">
+            <i class="b-digitalCompany__circle"><i></i></i>
             <div>
               <span>21</span>
               год<br>
