--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 </head>
 
 <body>
-  <Header class="header">
-    <div class="head">
+  <Header class="b-header">
+    <div class="b-head">
       <div class="container">
         <div class="row d-flex justify-content-between align-items-center">
-          <div class="col">
+          <div class="col-md-3 col-lg-2 col-sm-6 col-6">
             <div class="b-logo">
               <a href="#"><img class="b-logo__img" src="img/Logo.svg" /></a>
             </div>
           </div>
-          <div class="col">
+          <div class="col-md-6 col-lg-6  tablet-none">
             <ul class="b-menu__list">
               <li><a href="#">Перегородки из HPL</a></li>
               <li><a href="#">Перегородки из ЛДСП</a></li>
@@ -31,15 +31,21 @@
               <li><a href="#">Контакты</a></li>
             </ul>
           </div>
-          <div class="col">
-            <div class="d-flex align-items-center">
-              <div class="b-email">
+          <div class="col-md-3  col-lg-4  col-sm-6  col-6  d-flex align-items-center justify-content-end ">
+            <div class="d-flex b-email_b-phone mobile-none tablet-none">
+              <div class="b-email ">
                 <a href="#" class="b-phone__email">Example@gmail.com</a>
               </div>
               <div class="b-phone">
                 <a href="#" class="b-phone__link">+ 7 999 999 99 99</a>
               </div>
             </div>
+            <div class="b-header__burger">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+
           </div>
         </div>
       </div>
@@ -49,8 +55,8 @@
     <div class="b-slider">
       <div class="b-slide s-item1">
         <div class="container">
-          <div class="row d-flex">
-            <div class="col-md-8">
+          <div class="row d-flex justify-content-start">
+            <div class="col-md-8 ">
               <div class="b-sitem">
                 <div class="b-sitem__title">
                   Изготавливаем перегородки
@@ -627,7 +633,6 @@
         </div>
         <div class="col-md-3">
           <div class="b-digitalCompany__item">
-            <i class="b-digitalCompany__circle"><i></i></i>
             <div>
               <span>15 624</span>
               квадратных метров<br>
@@ -637,7 +642,6 @@
         </div>
         <div class="col-md-3">
           <div class="b-digitalCompany__item">
-            <i class="b-digitalCompany__circle"><i></i></i>
             <div>
               <span>99 870</span>
               квадратных метров<br>
@@ -647,7 +651,6 @@
         </div>
         <div class="col-md-3">
           <div class="b-digitalCompany__item">
-            <i class="b-digitalCompany__circle"><i></i></i>
             <div>
               <span>96%</span>
               довольных<br>
@@ -657,7 +660,6 @@
         </div>
         <div class="col-md-3">
           <div class="b-digitalCompany__item">
-            <i class="b-digitalCompany__circle"><i></i></i>
             <div>
               <span>21</span>
               год<br>
@@ -668,7 +670,6 @@
       </div>
     </div>
   </section>
-
   <section class="b-textAbout">
     <div class="container">
       <div class="row d-flex justify-content-center">
@@ -705,98 +706,99 @@
             <div class="b-project__slider">
               <div class="b-project__slide">
                 <div class="b-project__slide__list">
-                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
+                  <a href="img/rectangle.jpg" class="b-project__slide__item">
                     <img src="img/img_slider/img1.jpg" alt="">
                     <span class="b-project__slide__item__txt">
-                     1  Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
+                      1 Компания которая занимается изготовлением сантехнических перегородок на собственном производстве
+                      и
                       реализует их по цене, доступной для
                     </span>
                   </a>
-                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
+                  <a href="img/rectangle.jpg" class="b-project__slide__item">
                     <img src="img/img_slider/img2.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
                   </a>
-                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
+                  <a href="img/rectangle.jpg" class="b-project__slide__item">
                     <img src="img/img_slider/img3.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
                   </a>
-                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
+                  <a href="img/rectangle.jpg" class="b-project__slide__item">
                     <img src="img/img_slider/img4.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
                   </a>
-                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
+                  <a href="img/rectangle.jpg" class="b-project__slide__item">
                     <img src="img/img_slider/img5.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
                   </a>
-                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
+                  <a href="img/rectangle.jpg" class="b-project__slide__item">
                     <img src="img/img_slider/img6.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
                   </a>
-                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
+                  <a href="img/rectangle.jpg" class="b-project__slide__item">
                     <img src="img/img_slider/img6.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
                   </a>
-                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
+                  <a href="img/rectangle.jpg" class="b-project__slide__item">
                     <img src="img/img_slider/img6.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
                   </a>
-                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
+                  <a href="img/rectangle.jpg" class="b-project__slide__item">
                     <img src="img/img_slider/img6.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
                   </a>
-                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
+                  <a href="img/rectangle.jpg" class="b-project__slide__item">
                     <img src="img/img_slider/img6.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
                   </a>
-                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
+                  <a href="img/rectangle.jpg" class="b-project__slide__item">
                     <img src="img/img_slider/img6.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
                   </a>
-                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
+                  <a href="img/rectangle.jpg" class="b-project__slide__item">
                     <img src="img/img_slider/img6.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
                   </a>
-                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
+                  <a href="img/rectangle.jpg" class="b-project__slide__item">
                     <img src="img/img_slider/img6.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
                       реализует их по цене, доступной для
                     </span>
                   </a>
-                  <a href="img/rectangle.jpg" class="b-project__slide__item" >
+                  <a href="img/rectangle.jpg" class="b-project__slide__item">
                     <img src="img/img_slider/img6.jpg" alt="">
                     <span class="b-project__slide__item__txt">
                       Компания которая занимается изготовлением сантехнических перегородок на собственном производстве и
@@ -839,7 +841,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-2">
+        <div class="col-md-2 col-6">
           <div class="b-access__item">
             <div class="b-access__item__img">
               <img src="img/img3.jpg" alt="">
@@ -854,7 +856,7 @@
 
           </div>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 col-6">
           <div class="b-access__item">
             <div class="b-access__item__img">
               <img src="img/img3.jpg" alt="">
@@ -869,7 +871,7 @@
 
           </div>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 col-6">
           <div class="b-access__item">
             <div class="b-access__item__img">
               <img src="img/img3.jpg" alt="">
@@ -884,7 +886,7 @@
 
           </div>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 col-6">
           <div class="b-access__item">
             <div class="b-access__item__img">
               <img src="img/img3.jpg" alt="">
@@ -899,7 +901,7 @@
 
           </div>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 col-6">
           <div class="b-access__item">
             <div class="b-access__item__img">
               <img src="img/img3.jpg" alt="">
@@ -914,7 +916,7 @@
 
           </div>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 col-6">
           <div class="b-access__item">
             <div class="b-access__item__img">
               <img src="img/img3.jpg" alt="">
@@ -994,6 +996,9 @@
       </div>
     </div>
   </section>
+  <script type="text/javascript" charset="utf-8" async
+    src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A6f61cdb55d6a8631dd07fd27d4093ed7349e3bf4ee77580775cfd754074e29e3&amp;width=100%&amp;height=318&amp;lang=ru_RU&amp;scroll=true"></script>
+ 
   <footer class="b-footer">
     <div class="container">
       <div class="row d-flex justify-content-between align-items-start">
@@ -1069,9 +1074,25 @@
     </div>
   </div>
 
-  <script type="text/javascript" charset="utf-8" async
-    src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A6f61cdb55d6a8631dd07fd27d4093ed7349e3bf4ee77580775cfd754074e29e3&amp;width=100%&amp;height=318&amp;lang=ru_RU&amp;scroll=true"></script>
-  <script src="js/main.js"></script>
+
+  <div class="b-header__mobile-menu">
+    <div>
+      <ul class="b-header__mobile-menu__list">
+        <li><a href="#">Перегородки из HPL</a></li>
+        <li><a href="#">Перегородки из ЛДСП</a></li>
+        <li><a href="#"> Стоимость</a></li>
+        <li><a href="#">Проекты</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+      <div class="b-phone">
+        <a href="#" class="b-phone__link">+ 7 999 999 99 99</a>
+      </div>
+      <div class="b-email ">
+        <a href="#" class="b-phone__email">Example@gmail.com</a>
+      </div>
+    </div>
+  </div>
+      <script src="js/main.js"></script>
 </body>
 
 </html>
