--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
             <span> Перегородки из ЛДСП</span>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3 col-sm-6 col-6 b-item">
           <div class="b-digitalCompany__item">
             <div>
               <span>15 624</span>
@@ -640,7 +640,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3 col-sm-6 col-6 b-item">
           <div class="b-digitalCompany__item">
             <div>
               <span>99 870</span>
@@ -649,7 +649,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3 col-sm-6 col-6 b-item">
           <div class="b-digitalCompany__item">
             <div>
               <span>96%</span>
@@ -658,7 +658,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3 col-sm-6 col-6 b-item">
           <div class="b-digitalCompany__item">
             <div>
               <span>21</span>
@@ -695,7 +695,7 @@
         </div>
       </div>
       <div class="row d-flex justify-content-center">
-        <div class="col-md-6">
+        <div class="col-md-8 col-lg-6 col-sm-8 col-12">
           <ul class="d-tabs-list t-lits2">
             <li data-tabs="#tabId-7">Перегородки из HPL</li>
             <li data-tabs="#tabId-8">Перегородки из ЛДСП</li>
@@ -841,7 +841,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-2 col-6">
+        <div class="col-lg-2 col-md-4 col-6">
           <div class="b-access__item">
             <div class="b-access__item__img">
               <img src="img/img3.jpg" alt="">
@@ -856,7 +856,7 @@
 
           </div>
         </div>
-        <div class="col-md-2 col-6">
+        <div class="col-lg-2 col-md-4 col-6">
           <div class="b-access__item">
             <div class="b-access__item__img">
               <img src="img/img3.jpg" alt="">
@@ -871,7 +871,7 @@
 
           </div>
         </div>
-        <div class="col-md-2 col-6">
+        <div class="col-lg-2 col-md-4 col-6">
           <div class="b-access__item">
             <div class="b-access__item__img">
               <img src="img/img3.jpg" alt="">
@@ -886,7 +886,7 @@
 
           </div>
         </div>
-        <div class="col-md-2 col-6">
+        <div class="col-lg-2 col-md-4 col-6">
           <div class="b-access__item">
             <div class="b-access__item__img">
               <img src="img/img3.jpg" alt="">
@@ -901,7 +901,7 @@
 
           </div>
         </div>
-        <div class="col-md-2 col-6">
+        <div class="col-lg-2 col-md-4 col-6">
           <div class="b-access__item">
             <div class="b-access__item__img">
               <img src="img/img3.jpg" alt="">
@@ -916,7 +916,7 @@
 
           </div>
         </div>
-        <div class="col-md-2 col-6">
+        <div class="col-lg-2 col-md-4  col-6">
           <div class="b-access__item">
             <div class="b-access__item__img">
               <img src="img/img3.jpg" alt="">
